--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,33 +1,42 @@
+<app-search></app-search>
+<app-tags></app-tags>
+<app-not-found
+[visible]="!foods || !foods.length"
+resetLinkText="Reset Search">
+</app-not-found>
 <ul>
   <li *ngFor="let food of foods">
-    <a routerLink="/food/{{ food.id }}">
+    <a routerLink="/food/{{food.id}}">
       <img [src]="food.imageUrl" [alt]="food.name" />
       <div class="content">
         <div class="name">
-          {{ food.name }}
+          {{food.name}}
         </div>
-        <span class="favorite {{ food.favorite ? '' : 'not' }}">&#x2665;</span>
+        <span class="favorite {{food.favorite?'':'not'}}">
+          ❤
+        </span>
         <div class="stars">
-          <star-rating>
-            [value]="food.stars" [totalstars]="5" checkedcolor="red"
-            uncheckedcolor="black" size="22px" [readonly]="true"
+          <star-rating [value]="food.stars" [totalstars]="5" checkedcolor="red" uncheckedcolor="black" size="22px"
+            [readonly]="true">
           </star-rating>
         </div>
         <div class="product-item-footer">
           <div class="origins">
             <span *ngFor="let origin of food.origins">
-              {{ origin }}
+              {{origin}}
             </span>
           </div>
+
           <div class="cook-time">
-            <span>&#9716;</span>
+            <span>🕒</span>
             {{food.cookTime}}
           </div>
-          <div class="price">
-            <span>
-              {{food.price | currency}}
-            </span>
-          </div>
+        </div>
+
+        <div class="price">
+          <span>
+            {{food.price | currency}}
+          </span>
         </div>
       </div>
     </a>
