--- a/frontend/src/app/components/pages/checkout-page/checkout-page.component.html
+++ b/frontend/src/app/components/pages/checkout-page/checkout-page.component.html
@@ -10,6 +10,7 @@
     <div class="map">
         <app-title title="Choose your address on Map"
         fontSize="1.6rem"></app-title>
+        <app-map [order]="order"></app-map>
     </div>
     <div class="buttons-container">
         <div class="buttons">
