--- a/frontend/src/app/components/partials/map/map.component.html
+++ b/frontend/src/app/components/partials/map/map.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-    <button class="find-location" (click)="findMyLocation()">Find my Location</button>
+    <button *ngIf="!readonly" class="find-location" (click)="findMyLocation()">Find my Location</button>
     <div class="map" #map></div>
 </div>
