--- a/frontend/src/app/components/pages/register-page/register-page.component.html
+++ b/frontend/src/app/components/pages/register-page/register-page.component.html
@@ -3,43 +3,50 @@
     <app-title title="Register"></app-title>
     <form [formGroup]="registerForm" (ngSubmit)="submit()">
       <text-input
-        [control]="fc.name"
-        [showErrorsWhen]="isSubmitted"
-        label="Name"
-      ></text-input>
+      [control]="fc.name"
+      [showErrorsWhen]="isSubmitted"
+      label="Name">
+    `</text-input>
 
-      <text-input
-        [control]="fc.email"
-        [showErrorsWhen]="isSubmitted"
-        type="email"
-        label="Email"
-      ></text-input>
+    <text-input
+    [control]="fc.email"
+    [showErrorsWhen]="isSubmitted"
+    label="Email"
+    type="email">
+  `</text-input>
 
-      <text-input
-        [control]="fc.password"
-        [showErrorsWhen]="isSubmitted"
-        type="password"
-        label="Password"
-      ></text-input>
 
-      <text-input
-        [control]="fc.confirmPassword"
-        [showErrorsWhen]="isSubmitted"
-        label="Confirm Password"
-      ></text-input>
+  <text-input
+  [control]="fc.password"
+  [showErrorsWhen]="isSubmitted"
+  label="Password"
+  type="password">
+`</text-input>
 
-      <text-input
-        [control]="fc.address"
-        [showErrorsWhen]="isSubmitted"
-        label="Address"
-      ></text-input>
+<text-input
+[control]="fc.confirmPassword"
+[showErrorsWhen]="isSubmitted"
+label="Confirm Password"
+type="password">
+`</text-input>
 
-      <default-button text="Register"></default-button>
+<text-input
+[control]="fc.address"
+[showErrorsWhen]="isSubmitted"
+label="Address">
+`</text-input>
 
-      <div class="login">
-        Already a user? &nbsp;
-        <a routerLink="/login" [queryParams]="{returnUrl: returnUrl}">Login Here</a>
-      </div>
+
+<default-button text="Register"></default-button>
+
+<div class="login">
+  Already a user? &nbsp;
+  <a routerLink="/login" [queryParams]="{returnUrl: returnUrl}">
+    Login Here
+  </a>
+</div>
+
+
     </form>
   </div>
 </div>
